--- a/CalculadoraDeSubtrair/CalculadoraDeSubtrair.csproj
+++ b/CalculadoraDeSubtrair/CalculadoraDeSubtrair.csproj
@@ -46,16 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="frmAdicao.cs">
+    <Compile Include="frmSubtracao.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frmAdicao.Designer.cs">
-      <DependentUpon>frmAdicao.cs</DependentUpon>
+    <Compile Include="frmSubtracao.Designer.cs">
+      <DependentUpon>frmSubtracao.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="frmAdicao.resx">
-      <DependentUpon>frmAdicao.cs</DependentUpon>
+    <EmbeddedResource Include="frmSubtracao.resx">
+      <DependentUpon>frmSubtracao.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
