acerto no namespace

--- a/CalculadoraDeSubtrair/CalculadoraDeSubtrair.csproj
+++ b/CalculadoraDeSubtrair/CalculadoraDeSubtrair.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{5298F56E-6D04-4D92-91DF-BA0B2FE04D95}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CalculadoraDeSomar</RootNamespace>
+    <RootNamespace>CalculadoraDeSubtrair</RootNamespace>
     <AssemblyName>CalculadoraDeSomar</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
